# Household-Accounting-System

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONVENTION.md  Dockerfile  README.md  UserStory.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  manage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  checks.yml  deploy.yml
app/account/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  signals.py  test_account.py  tests.py  urls.py  views.py
app/analysis/: analyzer.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/notification/: apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
app/transaction/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
core/: exceptions.py  models.py  utils.py
household_budget/: .env  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  pyproject.toml  requirement.txt
household_budget/.github/workflows/: checks.yml
household_budget/app/account/: models.py
household_budget/app/transaction/: models.py  serializers.py  views.py
household_budget/app/transaction/Troubleshooting/: day1.md
household_budget/app/user/: models.py
household_budget/config/setting/: base.py
household_budget/scripts/: run.sh
nginx/: nginx.conf
scripts/: deploy.sh  run.sh
(+33 files in other folders)
